Fixed bug where you could click invisible buttons and mess the entire world up.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -99,6 +99,10 @@
 
 }
 
+.hidden-button-container-final {
+    display:none;
+}
+
 .column-select-button {
     width: 100%;
     height: 10vh;
